change color and font weight of class values

--- a/style.css
+++ b/style.css
@@ -209,6 +209,11 @@ li {
   border-bottom: none;
 }
 
+.values {
+  color: #854632;
+  font-weight: 600;
+}
+
 @media only screen and (min-width: 768px) {
   main {
     width: 736px;
